# jionlp_rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release-crate.yml  release-data.yml  release-nif.yml
bench/: Cargo.toml
bench/benches/: gadget.rs
bench/src/: lib.rs
crates/jionlp-core/: Cargo.toml  README.md
crates/jionlp-core/src/: lib.rs  trie.rs  util.rs
crates/jionlp-core/src/algorithm/: analyse_ner.rs  bpe.rs  data_correction.rs  entity_compare.rs  extractors.rs  keyphrase.rs  measure.rs  mod.rs  ner.rs  ner_accelerate.rs  ner_tools.rs  new_word.rs  sentiment.rs  simhash.rs  summary.rs  tag_conversion.rs  text_classification.rs
crates/jionlp-core/src/dict/: mod.rs
crates/jionlp-core/src/gadget/: char_radical.rs  china_location_alias.rs  id_card_parser.rs  idiom_solitaire.rs  location_parser.rs  location_recognizer.rs  lunar_solar.rs  mod.rs  money_num2char.rs  money_parser.rs  motor_vehicle_licence_plate.rs  phone_location.rs  pinyin.rs  remove_stopwords.rs  rule_mining.rs  split_sentence.rs  time_parser.rs  time_period_parser.rs  ts_conversion.rs
crates/jionlp-core/src/rule/: checker.rs  cleaners.rs  extractor.rs  html_cleansing.rs  mod.rs  pattern.rs
crates/jionlp-core/src/textaug/: homophone_substitution.rs  mod.rs  prng.rs  random_add_delete.rs  replace_entity.rs  swap_char_position.rs
crates/jionlp-core/tests/: parity.rs  parity_location.rs  parity_money.rs  parity_time.rs  time_parity.json  time_parity.rs  time_parity_failures.txt
crates/jionlp_nif/: Cargo.toml  README.md
crates/jionlp_nif/src/: lib.rs
scripts/: extract_time_parity.py
