[workspace]
resolver = "2"
members = [
    "crates/jionlp-core",
    "crates/jionlp_nif",
]
# `bench/` is a standalone (non-workspace) crate; its criterion dep pulls in
# clap 4.6 which requires Cargo unstable `edition2024`. Keeping it out of the
# workspace keeps NIF and core builds on stable Cargo 1.75+.

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["jionlp-rs contributors"]
description = "Rust port of JioNLP — Chinese NLP preprocessing & parsing toolkit"
repository = "https://github.com/Psli/jionlp_rs"
readme = "README.md"
rust-version = "1.85"

[workspace.dependencies]
aho-corasick = "1.1"
regex        = "1.10"
fancy-regex  = "0.13"
once_cell    = "1.19"
rustc-hash   = "2.0"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "1"
zip          = { version = "0.6", default-features = false, features = ["deflate"] }
chrono       = { version = "0.4", default-features = false, features = ["clock"] }
jieba-rs     = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
