[package]
name = "jionlp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Rust port of JioNLP — Chinese NLP preprocessing & parsing toolkit (core library)"
keywords = ["nlp", "chinese", "tokenization", "jionlp"]
categories = ["text-processing", "parser-implementations", "localization"]
rust-version.workspace = true

# Ship the runtime dictionary files so `init_default()` works out of the
# box. The bundled set is ~9 MB (mostly compressed zip archives) in
# `data/`, following the common Rust convention (cf. `tantivy`,
# `whatlang`, `icu`).
#
# LDA topic model data (`topic_word_weight.zip`, 1.8 MB) is intentionally
# excluded from the crate tarball to keep it under crates.io's 10 MB
# hard limit. Consumers who want LDA-weighted summary / keyphrase scoring
# should fetch the full `jionlp-data-v*.tar.gz` from GitHub Releases and
# point `init_from_path()` at that directory — see `dict::init_default`
# behavior when the file is missing (gracefully falls back to non-LDA
# scoring).
include = [
    "src/**/*.rs",
    "data/**/*.txt",
    "data/china_location.zip",
    "data/china_location_change.txt",
    "data/chinese_char_dictionary.zip",
    "data/chinese_idiom.zip",
    "data/chinese_word_dictionary.zip",
    "data/idf.zip",
    "data/phone_location.zip",
    "data/pinyin_phrase.zip",
    "data/pornography.zip",
    "data/sentiment_words.zip",
    "data/xiehouyu.zip",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[dependencies]
aho-corasick = { workspace = true }
regex        = { workspace = true }
fancy-regex  = { workspace = true }
once_cell    = { workspace = true }
rustc-hash   = { workspace = true }
thiserror    = { workspace = true }
zip          = { workspace = true }
chrono       = { workspace = true }
jieba-rs     = { workspace = true }
# Used to parse LDA topic_word_weight.json at dict init time.
serde_json   = { workspace = true }
serde        = { workspace = true }
